# Email-Spam-Detection

./: main.py  model.ipynb  pyproject.toml
