[project]
name = "email-spam-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clean-text>=0.7.1",
    "gensim>=4.4.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nltk>=3.9.3",
    "pandas>=3.0.1",
    "rich>=14.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.11",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "vadersentiment>=3.3.2",
]
